[package]
name = "aos-statshammer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "*"
derive_more = "*"
derive-new = "*"
rand = "*"

[dev-dependencies]
assert_float_eq = "*"
test-case = "*"
mockall = "*"
criterion = "*"

[[bench]]
name = "benchmark"
harness = false
